--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-/* Add a header and footer */
 header {
     background-color: #007BFF;
     color: white;
@@ -7,7 +6,7 @@ header {
     width: 100%;
 }
 
-header h1, footer p {
+header h1 {
     margin: 0;
 }
 
