--- a/styles.css
+++ b/styles.css
@@ -94,7 +94,7 @@ h1 {
 }
 
 .recipe-detail {
-	display: none;
+	display: block;
 	text-align: left;
 	max-height: 80vh; /* Limit height to avoid overflowing */
 	overflow-y: auto; /* Make recipe detail scrollable */
@@ -107,7 +107,6 @@ h1 {
 	display: flex;
 	justify-content: center;
 	gap: 20px; /* Add some space between the buttons */
-	margin-bottom: 20px; /* Add some space below the button container */
 	align-items: normal; /* Align items vertically */
 	flex-wrap: wrap; /* Allow buttons to wrap */
 }
@@ -151,6 +150,21 @@ label.button {
 
 .button-purple {
 	background-color: #9c27b0;
+}
+
+.hamburger-menu {
+	background: none;
+	border: none;
+	color: white;
+	font-size: 24px;
+	cursor: pointer;
+	position: absolute;
+	top: 10px;
+	right: 20px;
+}
+
+.hidden {
+	display: none;
 }
 
 /* Responsive design */
